# cpp-homeworks

./: .clang-format  .clang-tidy  README.md
hw1/: homework_1.pdfZone.Identifier
hw1/task_1/: commands.sh
hw1/task_2/: CMakeLists.txt  build.sh  info.txt  install.sh
hw1/task_2/src/: CMakeLists.txt
hw2/: homework_2.pdfZone.Identifier
hw2/task_1/: CMakeLists.txt  task_1.cpp
hw2/task_2/: CMakeLists.txt  task_2.cpp
hw3/: CMakeLists.txt  homework_3.pdfZone.Identifier
hw3/api/: html_writer.hpp
hw3/src/: CMakeLists.txt  homework_3.cpp  html_writer.cpp  image_browser.cpp
hw3/web_app/: test.html
hw4/: CMakeLists.txt  homework_4.pdfZone.Identifier
hw4/include/: homework_4.h  ipb_algorithm.h  named_vector.h
hw4/src/: CMakeLists.txt  homework_4.cpp  ipb_algorithm.cpp
hw4/tests/: CMakeLists.txt  test_ipb_algorithm.cpp  test_named_vector.cpp
hw5/: CMakeLists.txt  homework_5.pdfZone.Identifier
hw5/include/: convert_dataset.hpp  serialize.hpp
hw5/src/: CMakeLists.txt  convert_dataset.cpp  homework_5.cpp
hw5/tests/: sifts_internal.cpp  sifts_internal.hpp  test_convert_dataset.cpp  test_serialize.cpp
hw6/: CMakeLists.txt  homework_6.pdfZone.Identifier
hw6/include/: image.hpp
hw6/io_tools/: io_tools.cpp  io_tools.hpp
hw6/src/: CMakeLists.txt  homework_6.cpp  image.cpp
hw6/tests/: CMakeLists.txt  test.pgm  test.txt  test_resize.cpp
hw7/: CMakeLists.txt  homework_7.pdfZone.Identifier
hw7/include/: BowDictionary.hpp  convert_dataset.hpp  homework_7.h  kmeans.hpp
hw7/src/: BowDictionary.cpp  CMakeLists.txt  convert_dataset.cpp  homework_7.cpp  serialize.cpp
hw7/tests/: test_bow_dictionary.cpp  test_data.cpp  test_kmeans.cpp
hw8/: homework_8.pdfZone.Identifier
hw8/task_1/: CMakeLists.txt  stack_limit.cpp
hw8/task_2/: CMakeLists.txt
hw8/task_2/include/: homework_8.h  image.hpp
hw8/task_2/io_strategies/: CMakeLists.txt  IoStrategy.hpp  PngIoStrategy.cpp  PngIoStrategy.hpp  PpmIoStrategy.cpp  PpmIoStrategy.hpp
hw8/task_2/src/: CMakeLists.txt  homework_8.cpp  image.cpp
hw8/task_2/tests/: CMakeLists.txt  test_init.cpp
hw9/: CMakeLists.txt  homework_9.pdfZone.Identifier
hw9/include/: BowDictionary.hpp  histogram.hpp
hw9/src/: BowDictionary.cpp  CMakeLists.txt  histogram.cpp  homework_9.cpp  kmeans.cpp
hw9/tests/: CMakeLists.txt  test_dictionary.cpp
